# git_version_tagger

./: README.md  pyproject.toml  tag.py
src/git_retro_tag/: tag.py
