[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-retro-tag"
version = "0.1.0"
description = "Retroactively tag Git commits based on version changes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
git-retro-tag = "git_retro_tag.tag:main"

[tool.setuptools.packages.find]
where = ["src"]